<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2010, Jesper Fussing Mørk
 
  This file is part of Ratebeer Mobile for Android.
 
  Ratebeer Mobile is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  Ratebeer Mobile is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Ratebeer Mobile.  If not, see <http://www.gnu.org/licenses/>.
 -->
<resources>
<string name="drinking">What are you drinking?</string>
<string name="search_menu_button">Search</string>
<string name="refresh">Refresh</string>
<string name="update">Update</string>
<string name="app_name">RateBeer Mobile</string>
<string name="rate_aroma">Aroma</string>
<string name="rate_appearance">Appearance</string>
<string name="rate_flavor">Flavor</string>
<string name="rate_palate">Palate</string>
<string name="rate_overall">Overall</string>
<string name="rate_button">Add Rating</string>
<string name="rate_charleft">Min Characters Remaining: </string>
<string name="toast_rate_shortcomment">You must enter at least 75 characters in your rating</string>
<string name="rate_totalscore">Total</string>
<string name="rating_retrieving">Retrieving</string>
<string name="rating_retrieving_text">Retrieving beer data</string>
<string name="new_mail_button">Compose Beermail</string>
<string name="beermail_menu_button">Beermail</string>
<string name="beermail_retrieving">Refreshing beermails</string>
<string name="beermail_retrieving_text">Updating mail list and retrieving new mails</string>
<string name="beermail_nomail">You do not yet have any Beermail</string>
<string name="reply_mail_button">Reply</string>
<string name="delete_mail_button">Delete</string>
<string name="mail_action_to_label">To:</string>
<string name="mail_action_subject_label">Subject:</string>
<string name="mail_action_message_label">Message:</string>
<string name="send_mail_button">Send Message</string>
<string name="places_menu_button">Places</string>
<string name="no_place_ratings">N/A - Not enough ratings!</string>
<string name="places_retrieving_text">Getting nearby places to current location</string>
<string name="places_retrieving">Getting Nearby Places</string>
<string name="place_avgrating">Average Rating: </string>
<string name="place_noplaces">No nearby places found</string>
<string name="twitter_rating_message">Just rated %s with a %s http://www.ratebeer.com/user/%s/</string>

<string name="task_barcodelookup">Identifying barcode...</string>
<string name="task_deletebeermail">Deleting beermail...</string>
<string name="task_updatetwitter">Updating Twitter status...</string>
<string name="task_refreshfriendfeed">Refreshing friend feed...</string>
<string name="task_fetchbeerimage">Fetching beer image...</string>
<string name="task_loadbeerinfo">Loading beer info...</string>
<string name="task_retrievebeermails">Retrieving beermails...</string>
<string name="task_retrievebeermail">Loading beermail...</string>
<string name="task_loadreviews">Loading reviews...</string>
<string name="task_retrieveplaces">Retrieving nearby places...</string>
<string name="task_retrieverating">Retrieving rating...</string>
<string name="task_retrieveuserid">Retrieving user id...</string>
<string name="task_savingrating">Saving new rating...</string>
<string name="task_search">Searching...</string>
<string name="task_sendbeermail">Sending beermail...</string>
<string name="task_updatedrinkstatus">Updating drink status...</string>

<string name="menu_item_settings">Settings</string>
<string name="menu_item_call">Call</string>
<string name="menu_item_route">Get route</string>

<string name="scan_button">Scan Barcode</string>
<string name="scan_scanner_not_found">This feature uses the free Barcode Scanner application.\n\nWould you like to install this from the Android Market?</string>
<string name="scan_install">Install</string>
<string name="scan_nomarket">The Android Market is not available on your device.\n\nYou may download the Barcode Scanner manually from http://code.google.com/p/zxing/</string>

<string name="toast_rate_success">Rating submitted successfully</string>
<string name="toast_rate_failure">There was an error submitting the rating. Please try Again!</string>
<string name="toast_drink_empty">Please enter the name of the drink!</string>
<string name="toast_network_error">There was a connection error. Please check your connection and ratebeer.com credentials!</string>
<string name="toast_settings_saved">Your settings were saved</string>
<string name="toast_mail_sent">Mail sent successfully</string>
<string name="toast_mail_failed">Sending of beer mail failed</string>
<string name="toast_mail_deleted">Mail deleted successfully</string>
<string name="toast_mail_deleted_failed">There was an error deleting the mail</string>
<string name="toast_parse_error">There was an error parsing the response from ratebeer.com.</string>
<string name="toast_search_empty">No beers found in search</string>
<string name="toast_minimum_length">Please use at least 75 characters in your rating</string>
<string name="toast_search_barcode">Product could not be found</string>
<string name="toast_twit_success">Twitter post successful</string>

<string name="settings_user">RateBeer user</string>
<string name="settings_user_username">Username</string>
<string name="settings_user_password">Password</string>
<string name="settings_notifications">Notifications</string>
<string name="settings_notifications_enable">Enable notifications</string>
<string name="settings_notifications_enable_summary">Receive notifications for new BeerMail</string>
<string name="settings_notifications_interval">Interval</string>
<string name="settings_notifications_interval_summary">How often to check for new mail</string>
<string name="settings_twitter">Twitter</string>
<string name="settings_twitter_drinking">Tweet drinking status updates</string>
<string name="settings_twitter_newrating">Tweet new ratings</string>
<string name="settings_twitter_username">Username</string>
<string name="settings_twitter_password">Password</string>

<string name="search_label">Search for beers</string>
<string name="search_hint">Beer name</string>
<string name="search_no_query">No search query provided</string>
<string name="search_searching">Searching for beers</string>

<string name="view_scorena">N/A</string>
<string name="view_information">Information</string>
<string name="view_alias">Retired</string>
<string name="view_retired">Retired</string>
<string name="view_retalias">Ret. &amp; Alias</string>
<string name="view_brewer">by</string>
<string name="view_style">Style:</string>
<string name="view_score">Score</string>
<string name="view_ratings">Ratings</string>
<string name="view_overallpctl">Percentile</string>
<string name="view_abv">ABV</string>
<string name="view_drinking_button">Drinking This</string>
<string name="view_rate_button">Rate This</string>
<string name="view_rate_button_rated">See Rating</string>
<string name="view_no_reviews_found">No Reviews Found</string>
</resources>
