<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<ListView
		android:id="@android:id/list"
		android:visibility="invisible"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
		/>
	<TextView android:id="@+id/mail_action_to_text"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:textSize="15px"
       	android:text="@string/mail_action_to_label"
       	/>
	<EditText android:id="@+id/mail_action_to"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	/>
	<TextView android:id="@+id/mail_action_subject_text"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:textSize="15px"
       	android:text="@string/mail_action_subject_label"
       	/>
	<EditText android:id="@+id/mail_action_subject"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	/>
	<TextView android:id="@+id/mail_action_message_text"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:textSize="15px"
       	android:text="@string/mail_action_message_label"
       	/>
	<EditText android:id="@+id/mail_action_message"
       	android:layout_width="fill_parent"
       	android:layout_height="0dip"
       	android:layout_weight="1"
       	android:gravity="top"
       	/>
	<Button
		android:id="@+id/sendMailButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/send_mail_button"
		/>
	
</LinearLayout>
