<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2010, Jesper Fussing Mørk
 
  This file is part of Ratebeer Mobile for Android.
 
  Ratebeer Mobile is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  Ratebeer Mobile is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Ratebeer Mobile.  If not, see <http://www.gnu.org/licenses/>.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	>
		<EditText
			android:id="@+id/drinkingText"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:inputType="textShortMessage"
			android:imeOptions="actionGo"
		/>
		<Button
			android:id="@+id/drinkingUpdateButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/refresh"
		/>
	</LinearLayout>
	<TextView
		android:id="@+id/drinkingStatus"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:paddingLeft="5dip"
	    android:paddingBottom="10dip"
	    android:textColor="#ffffffff"
	    android:textStyle="bold"
    	/>
   	<ListView
		android:id="@android:id/list"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:divider="#99ffffff"
		android:dividerHeight="1px"
		android:clickable="false"
		android:longClickable="false"
		android:drawSelectorOnTop="false"
		android:choiceMode="none"
		android:listSelector="@android:color/transparent"
		/>
	<TextView
		android:id="@android:id/empty"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:gravity="center"
		/>
  	<TableLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:stretchColumns="0,1,2"
		android:gravity="fill_horizontal"
		>
		<TableRow>
			<Button
				android:id="@+id/searchMenuButton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/search_menu_button"
				/>
			<Button
				android:id="@+id/beermailMenuButton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/beermail_menu_button"
				/>
			<Button
				android:id="@+id/placesMenuButton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/places_menu_button"
				/>
		</TableRow>
	</TableLayout>
</LinearLayout>
