<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2010, Jesper Fussing Mørk
 
  This file is part of Ratebeer Mobile for Android.
 
  Ratebeer Mobile is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  Ratebeer Mobile is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Ratebeer Mobile.  If not, see <http://www.gnu.org/licenses/>.
 -->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	>
  	<ListView
		android:id="@android:id/list"
		android:visibility="invisible"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
		/>
  	<TextView
    	android:id="@+id/rating_label_beername"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textSize="20sp"
    	/>
  	<TableLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:paddingBottom="15dip"
		>
		<TableRow>
	        <TextView
	        	android:id="@+id/rating_label_aroma"
                android:text="@string/rate_aroma"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="12sp"
				android:gravity="center_horizontal"
				android:paddingLeft="10px"
                />
	        <TextView
	        	android:id="@+id/rating_label_appearance"
                android:text="@string/rate_appearance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="12sp"
				android:gravity="center_horizontal"
				android:paddingLeft="10px"
                />
	        <TextView
	        	android:id="@+id/rating_label_flavor"
                android:text="@string/rate_flavor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="12sp"
				android:gravity="center_horizontal"
				android:paddingLeft="10px"
                />
	        <TextView
	        	android:id="@+id/rating_label_palate"
                android:text="@string/rate_palate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="12sp"
				android:gravity="center_horizontal"
				android:paddingLeft="10px"
                />
	        <TextView
	        	android:id="@+id/rating_label_overall"
                android:text="@string/rate_overall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="12sp"
				android:gravity="center_horizontal"
				android:paddingLeft="10px"
                />
	        <TextView
	        	android:id="@+id/rating_label_totalscore"
                android:text="@string/rate_totalscore"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="15sp"
				android:gravity="center_horizontal"
				android:paddingLeft="10px"
                />
		</TableRow>  	
		<TableRow>
	        <TextView
	        	android:id="@+id/rating_value_aroma"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="12sp"
				android:gravity="center_horizontal"
				android:paddingLeft="10px"
                />
	        <TextView
	        	android:id="@+id/rating_value_appearance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="12sp"
				android:gravity="center_horizontal"
                />
	        <TextView
	        	android:id="@+id/rating_value_flavor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="12sp"
				android:gravity="center_horizontal"
                />
	        <TextView
	        	android:id="@+id/rating_value_palate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="12sp"
				android:gravity="center_horizontal"
                />
	        <TextView
	        	android:id="@+id/rating_value_overall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="12sp"
				android:gravity="center_horizontal"
                />
	        <TextView
	        	android:id="@+id/rating_value_totalscore"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="15sp"
				android:gravity="center_horizontal"
                />
		</TableRow>  	
	</TableLayout>
	<TextView
		android:id="@+id/rating_value_comment"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:paddingLeft="5px"
		android:paddingRight="5px"
		android:lines="100"
		/>
</LinearLayout>
